--- a/2015_spring/task/task0001/index.html
+++ b/2015_spring/task/task0001/index.html
@@ -4,8 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="logo"></div>
+        <div class="mainmenu"></div>
+        <a class="gitlink"></a>
+    </header>
+    <div class="bgimg">
+        <div class="content">
+            <h1></h1>
+            <p></p>
+        </div>
+    </div>
+    <article>
+        <section></section>
+        <section></section>
+        <section></section>
+    </article>
+    <div>
+        <div class="headimg"></div>
+        <p></p>
+        <p></p>
+    </div>
+    <footer>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </footer>
 </body>
 </html>
